Ada2/Ada_Drivers_Library/examples/MicroBit_v2/ravenscar/motor_drive_four_wheels/obj/main.adb.stderr
C:\Users\Saos\Git\Ada2\Ada_Drivers_Library\examples\MicroBit_v2\ravenscar\motor_drive_four_wheels\src\main.adb:69:12: error: "M4" is undefined
