Ada2/Ada_Drivers_Library/examples/MicroBit_v2/ravenscar/motor_drive_four_wheels/obj/main.ali
V "GNAT Lib v14"
M P W=b
A -gnatA
A --RTS=C:\users\saos\appdata\local\alire\cache\toolchains\gnat_arm_elf_14.1.3_184f9b28\arm-eabi\lib\gnat\embedded-nrf52833\
A -mlittle-endian
A -mthumb
A -mfloat-abi=hard
A -mfpu=fpv4-sp-d16
A -mcpu=cortex-m4
A -fno-tree-loop-distribute-patterns
A -g
A -gnat2022
A -gnateDPROFILING=false
A -g
A -mlibarch=armv7e-m+fp
A -march=armv7e-m+fp
P DB LC TF  SS ZX

RN
RV NO_IMPLEMENTATION_PRAGMAS

U main%b		main.adb		74e2892f NE OO SU
Z ada.strings.text_buffers%s  a-sttebu.adb	a-sttebu.ali
W microbit%s		microbit.ads		microbit.ali
W microbit.iosfortasking%s  microbit-iosfortasking.adb  microbit-iosfortasking.ali

D ada.ads		20240605232314 76789da1 ada%s
D a-except.ads		20240605232314 e7970cd9 ada.exceptions%s
D a-finali.ads		20240605232314 bf4f806b ada.finalization%s
D a-interr.ads		20240605232314 bdf68b51 ada.interrupts%s
D a-intnam.ads		20240605232314 543e27b6 ada.interrupts.names%s
D a-stream.ads		20240605232314 119b8fb3 ada.streams%s
D a-string.ads		20240605232314 90ac6797 ada.strings%s
D a-sttebu.ads		20240605232314 f1ad67a2 ada.strings.text_buffers%s
D a-stuten.ads		20240605232314 c6ced0ae ada.strings.utf_encoding%s
D a-tags.ads		20240605232314 9eaa38c6 ada.tags%s
D a-taside.ads		20240605232314 c0a7c8d8 ada.task_identification%s
D a-unccon.ads		20240605232314 0e9b276f ada.unchecked_conversion%s
D hal.ads		20240918101452 2b42c80e hal%s
D hal-gpio.ads		20240918101452 7f0c2ffe hal.gpio%s
D hal-i2c.ads		20240918101452 416d8959 hal.i2c%s
D hal-spi.ads		20240918101452 fe139819 hal.spi%s
D hal-uart.ads		20240918101452 d58316b4 hal.uart%s
D interfac.ads		20240605232314 9111f9c1 interfaces%s
D main.adb		20240925095816 ccb58780 main%b
D microbit.ads		20240918101450 c5aa85df microbit%s
D microbit-iosfortasking.ads  20240918101450 7dfd8b70 microbit.iosfortasking%s
D nrf.ads		20240918101450 74cf72f5 nrf%s
D nrf-device.ads	20240918101450 9c9916c4 nrf.device%s
D nrf-gpio.ads		20240918101450 ab6d4598 nrf.gpio%s
D nrf-rtc.ads		20240918101450 36d88130 nrf.rtc%s
D nrf-spi_master.ads	20240918101450 a8ff49a3 nrf.spi_master%s
D nrf-timers.ads	20240918101450 15fa58e3 nrf.timers%s
D nrf-twi.ads		20240918101450 8de9adf3 nrf.twi%s
D nrf-uart.ads		20240918101450 9fa4b8b9 nrf.uart%s
D nrf_svd.ads		20240918101450 87ba21d7 nrf_svd%s
D nrf_svd-rtc.ads	20240918101450 57c7ffc8 nrf_svd.rtc%s
D nrf_svd-spi.ads	20240918101450 6e2ffb69 nrf_svd.spi%s
D nrf_svd-timer.ads	20240918101450 ba50db1c nrf_svd.timer%s
D nrf_svd-twi.ads	20240918101450 68301534 nrf_svd.twi%s
D nrf_svd-uart.ads	20240918101450 83bcebc8 nrf_svd.uart%s
D system.ads		20240605232314 124d8146 system%s
D s-bb.ads		20240605232314 09e072ae system.bb%s
D s-bbbopa.ads		20240605232314 f68efaf0 system.bb.board_parameters%s
D s-bbbosu.ads		20240605232314 0f820a2a system.bb.board_support%s
D s-bbcppr.ads		20240605232314 c529bbcc system.bb.cpu_primitives%s
D s-bbinte.ads		20240605232314 cf617f22 system.bb.interrupts%s
D s-bbmcpa.ads		20240605232314 5a35b8f4 system.bb.mcu_parameters%s
D s-bbpara.ads		20240605232314 1ae191c6 system.bb.parameters%s
D s-bbthre.ads		20240605232314 5f49caa9 system.bb.threads%s
D s-bbthqu.ads		20240605232314 cd23d79e system.bb.threads.queues%s
D s-bbtime.ads		20240605232314 ad086247 system.bb.time%s
D s-finmas.ads		20240605232314 28987ac5 system.finalization_masters%s
D s-finroo.ads		20240605232314 4ff27390 system.finalization_root%s
D s-interr.ads		20240605232314 d74bd991 system.interrupts%s
D s-multip.ads		20240605232314 f33e0e35 system.multiprocessors%s
D s-mufalo.ads		20240605232314 3dca0374 system.multiprocessors.fair_locks%s
D s-musplo.ads		20240605232314 69fa25c4 system.multiprocessors.spin_locks%s
D s-osinte.ads		20240605232314 229b14dd system.os_interface%s
D s-parame.ads		20240605232314 07f3e19f system.parameters%s
D s-pooglo.ads		20240605232314 91708d21 system.pool_global%s
D s-putima.ads		20240605232314 17291fe4 system.put_images%s
D s-retsta.ads		20240605232314 0f6b06cb system.return_stack%s
D s-secsta.ads		20240605232314 bd894d4b system.secondary_stack%s
D s-stalib.ads		20240605232314 1c9580f6 system.standard_library%s
D s-stoele.ads		20240605232314 ccded4e8 system.storage_elements%s
D s-stopoo.ads		20240605232314 e9fa2dd8 system.storage_pools%s
D s-stratt.ads		20240605232314 a1861007 system.stream_attributes%s
D s-tasinf.ads		20240605232314 801abd01 system.task_info%s
D s-taspri.ads		20240605232314 37f162b4 system.task_primitives%s
D s-taskin.ads		20240605232314 989d56fd system.tasking%s
D s-taprob.ads		20240605232314 c8fc0753 system.tasking.protected_objects%s
D s-traent.ads		20240605232314 c81cbf8c system.traceback_entries%s
D s-unstyp.ads		20240605232314 fa2a7f59 system.unsigned_types%s
D s-wchcon.ads		20240605232314 d9032363 system.wch_con%s
D s-wchstw.ads		20240605232314 2d112c01 system.wch_stw%s
G a e
G c Z b b [main standard 34 11 none]
G r c none [main standard 34 11 none] [set_analog_period_us microbit__iosfortasking 30 14 none]
G r c none [main standard 34 11 none] [set microbit__iosfortasking 22 14 none]
G r c none [main standard 34 11 none] [write microbit__iosfortasking 34 14 none]
X 14 hal-gpio.ads
47h9*GPIO_Point
X 15 hal-i2c.ads
48h9*I2C_Port
X 16 hal-spi.ads
48h9*SPI_Port
X 17 hal-uart.ads
48h9*UART_Port
X 19 main.adb
34U11*Main 34b11 101l5 101t9
35i4 Speed{21|28I9} 71r17 78r17 86r17 93r17
36b4 DriveForward{boolean} 69r16 70r20 76r16 77r20 84r16 85r20 91r16 92r20
38b4 UseLeftFrontWheel{boolean} 68r7
39b4 UseLeftBackWheel{boolean} 75r7
40b4 UseRightFrontWheel{boolean} 83r7
41b4 UseRightBackWheel{boolean} 90r7
X 20 microbit.ads
57K9*MicroBit 19|31r6 31r35 32w6 20|114e13
X 21 microbit-iosfortasking.ads
5K18*IOsForTasking 19|31w15 31r44 21|93e27
22U14*Set 19|69s7 70s7 76s7 77s7 84s7 85s7 91s7 92s7
28I9*Analog_Value<short_integer> 19|35r21
30U14*Set_Analog_Period_Us 19|64s4
34U14*Write 19|71s7 78s7 86s7 93s7
X 49 s-interr.ads
97U14*Install_Restricted_Handlers_Sequential 98i<c,__gnat_attach_all_handlers>22
X 58 s-secsta.ads
46P9*SS_Stack_Ptr(43R9)
X 65 s-taskin.ads
398V13*Get_Sec_Stack{58|46P9} 399i<c,__gnat_get_secondary_stack>22

